--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -153,7 +153,7 @@
 }
 
 .testbg { 
-    background-image: url("../img/Vmarine.jpg");
+    background-image: url("../img/NuBie.png");
     height: 400px; 
     background-position: center;
     background-repeat: no-repeat;
@@ -161,7 +161,7 @@
 }
 
 .aguabg { 
-    background-image: url("../img/aguaDeLuz.png");
+    background-image: url("../img/FastandFresh.png");
     height: 400px; 
     background-position: center;
     background-repeat: no-repeat;
