--- a/src/component/navbar.scss
+++ b/src/component/navbar.scss
@@ -73,7 +73,7 @@
   }
    .nav-menu.active {    
     background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-    margin-right: 0;
+    margin-right: 64px;
     grid-gap: 5px;
     right: 0px;
     opacity: 1;
