--- a/src/component/navbar.scss
+++ b/src/component/navbar.scss
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: top 0.5s
   }
   .nav-menu{
     display: grid;
@@ -73,7 +74,7 @@
   }
    .nav-menu.active {    
     background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-    margin-right: 64px;
+    margin-right: 60px;
     grid-gap: 5px;
     right: 0px;
     opacity: 1;
